--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.8",
     "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@babel/runtime": "^7.17.7",
     "@pmmmwh/react-refresh-webpack-plugin": "github:pmmmwh/react-refresh-webpack-plugin",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
+    "dotenv-webpack": "^7.1.0",
     "file-loader": "^6.2.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
@@ -31,12 +36,13 @@
     "react-refresh": "^0.11.0",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
+    "typescript": "^4.6.2",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
-    "@babel/runtime": "^7.17.2",
+    "@types/node": "^17.0.21",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.26.0",
     "react": "^17.0.2",
